--- a/practical/manages_table.ipynb
+++ b/practical/manages_table.ipynb
@@ -114,6 +114,16 @@
     "#drop table table_name\n",
     "#drop volume volume_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing_git....\n",
+    "#corrected"
+   ]
   }
  ],
  "metadata": {
